--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
-sentence-transformers
-unicorn
-ctransformers
-langchain
-python-box
-streamlit
+sentence-transformers==2.2.2
+ctransformers==0.2.27
+langchain==0.0.352
+streamlit==1.29.0
